# ai-laws-of-simplicity

./: .gitignore  Dockerfile  EXPERIMENT_STATUS.md  FIX_SUMMARY.md  INSTALL.md  PILOT_RESULTS.md  README.md  SOLUTION_SUMMARY.md  patch.txt  pyproject.toml  requirements.txt  test_password_reset_comprehensive.py  test_password_reset_issue.py  test_pr_scenario.py  test_username_validator.py
django/conf/: __init__.py
django/contrib/auth/: tokens.py  validators.py
django/utils/: crypto.py  http.py
examples/: nexos_usage.py
experiment/: README.md  config.py  runner.py
experiment/harness/: base.py  humaneval.py  swe_bench.py
experiment/metrics/: analyzer.py
experiment/mini_agent/: config_builder.py  runner.py  trajectory_parser.py
experiment/providers/: __init__.py  anthropic_provider.py  base.py  config.py  litellm_provider.py  openai_provider.py
experiment/utils/: api_runner.py  isolation.py
scripts/: analyze_results.py  run_experiment.sh  test_api_pilot.py
tests/: test_api_runner.py  test_mini_agent_config.py  test_mini_agent_runner.py  test_nexos_provider.py  test_providers.py
