[project]
name = "ai-laws-of-simplicity"
version = "0.1.0"
description = "Research experiment to measure the impact of Laws of Simplicity skill on AI coding agent efficiency"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "litellm>=1.30.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "docker>=6.0.0",
    "swebench>=1.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "datasets>=2.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mini-swe-agent>=2.2.7",
]

[tool.setuptools]
packages = ["experiment"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
